# task-email-net-option-premium

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.circleci/: config.yml
.devcontainer/: devcontainer.json
src/: main.py  settings.py
src/utils/: aws_utils.py  email.py  ft_options.py  utils_func.py
