[project]
name = "task-email-net-option-premium"
version = "0.0.1"
description = ""
requires-python = ">=3.8,<4.0.0"
dependencies = [
    "boto3>=1.35.60",
    "caption-emailing>=0.0.8",
    "caption-ft-options-api>=0.0.5",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "black>=24.8.0",
    "mypy>=1.11.1",
    "isort>=5.13.2",
    "pytest>=8.3.2",
    "caption-ease-of-use-scripts>=0.0.7",
    "devtools>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
